<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/AccountFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_account" />

    <item
        android:id="@+id/MyOrdersFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_myorders" />

    <item
        android:id="@+id/NewOrderFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_neworder" />

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/supportFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_support" />

</menu>