<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/AccountFragment">

    <fragment
        android:id="@+id/AccountFragment"
        android:name="com.shep.shep.ui.home.HomeFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/MyOrdersFragment"
        android:name="com.shep.shep.ui.dashboard.DashboardFragment"
        android:label="@string/title_myorders"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/NewOrderFragment"
        android:name="com.shep.shep.ui.notifications.NotificationsFragment"
        android:label="@string/title_neworder"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.shep.shep.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/supportFragment"
        android:name="com.shep.shep.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_support" />
</navigation>