<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/NewOrderScrool"
    tools:context=".ui.notifications.NotificationsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Название">

            </TextView>

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/NameOfNewOrder"
                android:inputType="textMultiLine"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Описание" />

            <EditText
                android:id="@+id/editTextTextMultiLine2"
                android:layout_width="match_parent"
                android:layout_height="457dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/DescriptionOfNewOrder"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Цена" />

            <EditText
                android:id="@+id/editTextTextMultiLine3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/CostOfNewOrder"
                android:inputType="textMultiLine"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="Разместить" />


        </LinearLayout>

    </RelativeLayout>
</ScrollView>